--- a/webpage.html
+++ b/webpage.html
@@ -11,7 +11,7 @@
         <div class="container-list">
             <ul class='list'>
                 <li><input class="textbox" name='bullet-points'value="Enter your List" >
-                    <!--Insert JavaScript-->
+                    <!--Insert JavaScripttt-->
                 </li>
             </ul>
         </div>
