--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -65,7 +65,7 @@
        
              
    
-    <script src="ToDoList.js"></script>
+    <script src="WebPage.js"></script>
     <style>
         @import url('https://fonts.cdnfonts.com/css/pencil-2');
     </style>
