--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ToDoList</title>
-    <link rel="stylesheet" href="ToDoList.css">
+    <link rel="stylesheet" href="WebPage.css">
     <link href="https://fonts.cdnfonts.com/css/pencil-2" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -65,7 +65,7 @@
        
              
    
-    <script src="ToDoList.js"></script>
+    <script src="WebPage.js"></script>
     <style>
         @import url('https://fonts.cdnfonts.com/css/pencil-2');
     </style>
