--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ToDoList</title>
-    <link rel="stylesheet" href="asde.css">
+    <link rel="stylesheet" href="WebPage.css">
     <link href="https://fonts.cdnfonts.com/css/pencil-2" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
