--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -11,8 +11,10 @@
     <header>
         <h1>To Do List:</h1>
     <form id="task-form">
-        <input type="text" id= 'task-input' placeholder="What do you plan to do?">
-        <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"/></i>
+        <div id="textImage-border">
+            <input type="text" id= 'task-input' placeholder="What do you plan to do?">
+            <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"/></i>
+        </div>
     </form>
     </header>
     <main>
