--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="WebPage.css">
     <link href="https://fonts.cdnfonts.com/css/pencil-2" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.cdnfonts.com/css/pencil-2');
     </style>
@@ -25,7 +25,7 @@
         <section class="task-list">
             
             <div id="tasks">
-                <!-- <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"/></i> -->
+                <!-- <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"> -->
                 <!--<div class="task"> 
                     <div class="content">
                         <input type="text" class="text" value='new task' >
