--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -17,6 +17,7 @@
         <div id="textImage-border">
             <input type="text" id= 'task-input' placeholder="What do you plan to do?" oninput="scribble()">
             <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"/></i>
+            <input type="date" id="date-input" >
         </div>
         
     </form>
