--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -17,7 +17,7 @@
         <h1>To Do List:</h1>
     <form id="task-form">
         <div id="textImage-border">
-            <input type="text" id= 'task-input' placeholder="What do you plan to do?" oninput="scribble()">
+            <input type="text" id= 'task-input' placeholder="New Task" oninput="scribble()">
             <input type="image" id='submit-input' src="pencil-solid.svg" alt="+" height="30"/></i>
             <input type="date" id="date-input" >
         </div>
