--- a/HealthWeb/Health.html
+++ b/HealthWeb/Health.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="health.css">
-  <title> HealthWeb </title>
+  <title> BestHealth </title>
 </head>
 <body>
   <h1>HAVE A GOOD HEALTH</h1>
