--- a/HealthWeb/index.html
+++ b/HealthWeb/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="health.css">
-  <title>BestHealth</title>
+  <title> HealthWeb </title>
 </head>
-<body>
+<body class="FirstPage" id="Homepage">
   <h1>HAVE A GOOD HEALTH</h1>
+  <button class="button-1" id="next" tagname="p1" >Next</button>
+  <!--onclick="window.location.href='HealthP2.html'"-->
+  <script src="Health.js"></script>
 </body>
 </html>
