next/prev button

--- a/HealthWeb/HealthP2.html
+++ b/HealthWeb/HealthP2.html
@@ -6,8 +6,8 @@
 </head>
 <body id="Secondpage">
     <h1> Second Page for Health</h1>
-    <button class="button-2" id="prev" >Back</button>
-    <button class="button-1" id="next" >Next</button>
+    <button class="button-2" id="prev" onclick="window.location.href='index.html'">Back</button>
+    <button class="button-1" id="next" onclick="window.location.href='HealthP3.html'">Next</button>
     
     <script src="Health.js"></script>
 </body>
