--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Third Page</title>
 </head>
-<body>
+<body id="Thirdpage">
     <h1>THIRD PAGE</h1>
-    <button class="button-2" id="prev">Back</button>
-    <button class="button-1" id="next" >Next</button>
+    <button class="button-2" id="prev" onclick="window.location.href='HealthP2.html'">Back</button>
     <script src="Health.js"></script>
 </body>
 </html>
