--- a/HealthWeb/index.html
+++ b/HealthWeb/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="health.css">
+  <link rel="stylesheet" href="Health.css">
   <title> HealthWeb </title>
 </head>
 <body class="FirstPage" id="Homepage">
   <h1>HAVE A GOOD HEALTH</h1>
-  <button class="button-1" id="next" tagname="p1" >Next</button>
+  <button class="button-1" id="next" onclick="window.location.href='HealthP2.html'">Next</button>
   <!--onclick="window.location.href='HealthP2.html'"-->
   <script src="Health.js"></script>
 </body>
