--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise</title>
+    <title>About Us</title>
 </head>
 <body>
-    <h1>Exercise</h1>
+    <h1>About Us</h1>
     <button class="button-1" id="Home" >Home</button>
     <button class="button-2" id="Tracker" >My Tracker</button>
     <button class="button-3" id="Exercise" >Exercise</button>
