--- a/HealthWeb/HealthP2.html
+++ b/HealthWeb/HealthP2.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
    
-    <title>Second Page</title>
+    <title>Tracker</title>
 </head>
 <body id="Secondpage">
-    <h1> Second Page for Health</h1>
-    <button class="button-2" id="prev" onclick="window.location.href='index.html'">Back</button>
-    <button class="button-1" id="next" onclick="window.location.href='HealthP3.html'">Next</button>
+    <h1> Tracker</h1>
+    <button class="button-1" id="Home" >Home</button>
+    <button class="button-2" id="Tracker" >My Tracker</button>
+    <button class="button-3" id="Exercise" >Exercise</button>
+    <button class="button-4" id="AboutUs" >About Us</button>
     
     <script src="Health.js"></script>
 </body>
