--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="Health.js" defer></script>
+    <link rel="stylesheet" href="Health.css"/>
+
+
 </head>
 <body>
-    <h1>Exercise</h1>
-    <button class="button-1" id="Home" >Home</button>
-    <button class="button-2" id="Tracker" >My Tracker</button>
-    <button class="button-3" id="Exercise" >Exercise</button>
-    <button class="button-4" id="AboutUs" >About Us</button>
-    <script src="Health.js"></script>
+
+    <section class="header">
+        <nav>
+            <a href="Health.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+            <div class="navLinks" id="nav-links">
+                <i class="fa fa-times" onclick="hideMenu()"></i>
+
+                <ul>
+                    <li><a href="Health.html">Home</a></li>
+                    <li><a href="HealthP2.html">My Caloric Tracker</a></li>
+                    <li><a href="HealthP3.html">Exercise</a></li>
+                    <li><a href="HealthP4.html">About Us</a></li>
+                    <a href="#"><button id="signIn" onclick="">Sign In</button></a>
+
+
+                </ul>
+            </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
+        </nav>
+    </section>
+
+    <section class="content">
+        <!-- We put all the content in here-->
+    </section>  
+
+
+    <section class="footer">
+        <nav class="footer-content">
+            <a href="Health.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+            <div class="navLinks2" id="nav-links">
+                <!-- <i class="fa fa-times" ></i> -->
+
+                <ul>
+                    <li><a href="Health.html">Home</a></li>
+                    <li><a href="HealthP2.html">My Caloric Tracker</a></li>
+                    <li><a href="HealthP3.html">Exercise</a></li>
+                    <li><a href="HealthP4.html">About Us</a></li>
+                    
+                </ul>
+            </div>
+            <!-- <i class="fa fa-bars" onclick="showMenu()"></i> -->
+        </nav>
+    </section>    
 </body>
 </html>
