--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 
     <section class="header">
         <nav>
-            <a href="Health.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+            <a href="Index.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
             <div class="navLinks" id="nav-links">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
