--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -15,7 +15,7 @@ z<!DOCTYPE html>
 
     <section class="header">
         <nav>
-            <a href="Index.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+            <a href="index.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
             <div class="navLinks" id="nav-links">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
