--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -20,7 +20,7 @@ z<!DOCTYPE html>
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="Health.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="HealthP2.html">My Caloric Tracker</a></li>
                     <li><a href="HealthP3.html">Exercise</a></li>
                     <li><a href="HealthP4.html">About Us</a></li>
