--- a/HealthWeb/HealthP2.html
+++ b/HealthWeb/HealthP2.html
@@ -15,12 +15,12 @@
 
     <section class="header">
         <nav>
-            <a href="Health.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+            <a href="index.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
             <div class="navLinks" id="nav-links">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
 
                 <ul>
-                    <li><a href="Health.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="HealthP2.html">My Caloric Tracker</a></li>
                     <li><a href="HealthP3.html">Exercise</a></li>
                     <li><a href="HealthP4.html">About Us</a></li>
@@ -39,12 +39,12 @@
 
         <section class="footer">
             <nav class="footer-content">
-                <a href="Health.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
+                <a href="index.html"><img src="healthLogo.png" alt="Logo" width="192" height="100.5"></a>
                 <div class="navLinks2" id="nav-links">
                     <!-- <i class="fa fa-times" ></i> -->
     
                     <ul>
-                        <li><a href="Health.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="HealthP2.html">My Caloric Tracker</a></li>
                         <li><a href="HealthP3.html">Exercise</a></li>
                         <li><a href="HealthP4.html">About Us</a></li>
