--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -35,6 +35,49 @@ z<!DOCTYPE html>
 
     <section class="content">
         <!-- We put all the content in here-->
+        <img src = "user1.png" alt = "">
+                <div class = "name">Emma Moore</div>
+                <div class = "desig">Developer</div>
+                <div class = "about">Emma Moore is a passionate and experienced software developer dedicated to crafting innovative solutions that solve real-world problems. 
+                    Moore believes technology should empower and simplify the lives of its users. This principle is reflected in her work, which is marked by a relentless 
+                    pursuit of excellence, attention to detail, and a keen eye for user experience.</div>
+                <div class = "social-links">
+                    <a href = "#"><i class = "fa fa-facebook"></i></a>
+                    <a href = "#"><i class = "fa fa-instagram"></i></a>
+                    <a href = "#"><i class = "fa fa-twitter"></i></a>
+                    <a href = "#"><i class = "fa fa-github"></i></a>
+                </div>
+            </div>
+            <div class = "teams">
+                <img src = "user2.png" alt = "">
+                <div class = "name">Micheal Davis</div>
+                <div class = "desig">Manager</div>
+                <div class = "about"> Micheal Davis is an accomplished and dedicated manager known for his exceptional leadership skills, unwavering commitment to excellence, 
+                    and a proven track record of driving results. As a leader, Davis thrives in both challenging and dynamic environments. He has a deep understanding of what it 
+                    takes to inspire and motivate a team to reach its full potential, all while maintaining a strong focus on delivering outstanding performance and achieving organizational goals.</div>
+                <div class = "social-links">
+                    <a href = "#"><i class = "fa fa-facebook"></i></a>
+                    <a href = "#"><i class = "fa fa-instagram"></i></a>
+                    <a href = "#"><i class = "fa fa-twitter"></i></a>
+                    <a href = "#"><i class = "fa fa-github"></i></a>
+                </div>
+            </div>
+            <div class = "teams">
+                <img src = "user3.png" alt = "">
+                <div class = "name">Serena Brown</div>
+                <div class = "desig">Designer</div>
+                <div class = "about">Serena Brown is a creative visionary and experienced designer with a passion for transforming ideas into visually stunning and impactful designs.
+                    Brown believes that great design goes beyond aesthetics; it should also tell a compelling story and evoke emotions. She approaches each project with a deep understanding 
+                    of the client's vision and the end user's needs, ensuring that every design is not only visually captivating but also functional and user-friendly. </div>
+                <div class = "social-links">
+                    <a href = "#"><i class = "fa fa-facebook"></i></a>
+                    <a href = "#"><i class = "fa fa-instagram"></i></a>
+                    <a href = "#"><i class = "fa fa-twitter"></i></a>
+                    <a href = "#"><i class = "fa fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>  
     
     
