--- a/HealthWeb/HealthP4.html
+++ b/HealthWeb/HealthP4.html
@@ -35,7 +35,13 @@ z<!DOCTYPE html>
 
     <section class="content">
         <!-- We put all the content in here-->
-        <img src = "user1.png" alt = "">
+        <div class = "container">
+            <div class = "header">
+                <h1>Our Team</h1>
+            </div>
+            <div class = "sub-container">
+            <div class = "teams">
+                <img src = "user1.png" alt = "">
                 <div class = "name">Emma Moore</div>
                 <div class = "desig">Developer</div>
                 <div class = "about">Emma Moore is a passionate and experienced software developer dedicated to crafting innovative solutions that solve real-world problems. 
