--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -35,6 +35,68 @@
 
     <section class="content">
         <!-- We put all the content in here-->
+        <div id="image-container">
+            
+            <img src="Muscles.png" usemap="#image_map" class='body-image'alt="human-body" id="body-image">
+                <!--original-->
+                <!-- <map name="image_map">
+                <area alt="leftarm1" title="leftarm1" href="#arms" coords="77,93 111,97 73,313 28,309 " shape="polygon">
+                <area alt="leftarm2" title="leftarm2" href="#arms" coords="361,85 325,87 280,315 322,325 " shape="polygon">
+                <area alt="rightarm1" title="rightarm1" href="#arms" coords="204,104 238,104 285,302 243,333" shape="polygon">
+                <area alt="rightarm2" title="rightarm2" href="#arms" coords="457,87 484,84 542,310 488,325 " shape="polygon">
+                <area alt="torso" title="torso" href="#torso" coords="109,105 203,105 228,245 87,244" shape="polygon">
+                <area alt="back" title="back" href="#back" coords="360,82 456,81 473,243 343,237" shape="polygon">
+                <area alt="leftleg1" title="leftleg1" href="#legs" coords="96,246 155,287 153,557 95,559 " shape="polygon">
+                <area alt="rightleg1" title="rightleg1" href="#legs" coords="220,245 166,286 160,555 223,561 " shape="polygon">
+                <area alt="leftleg2" title="leftleg2" href="#legs" coords="350,236 406,310 404,538 352,547 " shape="polygon">
+                <area alt="rightleg2" title="rightleg2" href="#legs" coords="469,252 410,307 412,539 457,539 " shape="polygon">
+                </map> -->
+
+                <!--resized-->
+                <map name="image_map">
+                    <area alt="leftarm1" title="leftarm1" href="#arms" coords="61.765,74.550, 88.847,78.020,58.519,249.251,22.407,247.324 " shape="polygon">
+                    <area alt="leftarm2" title="leftarm2" href="#arms" coords="289.538,67.891,257.403,69.110,222.408,250.602,255.945,258.493 " shape="polygon">
+                    <area alt="rightarm1" title="rightarm1" href="#arms" coords="163.042,82.384,189.038,82.384,226.266,240.643,193.271,266.719" shape="polygon">
+                    <area alt="rightarm2" title="rightarm2" href="#arms" coords="365.412,69.110,385.547,66.972,431.157,246.404,389.292,258.493 " shape="polygon">
+                    <area alt="torso" title="torso" href="#torso" coords="87.085,83.399,160.675,83.399,180.810,196.770,69.344,196.026" shape="polygon">
+                    <area alt="back" title="back" href="#back" coords="288.283,65.648,363.294,64.794,378.854,196.026,274.572,190.682" shape="polygon">
+                    <area alt="leftleg1" title="leftleg1" href="#legs" coords="76.502,196.482,123.660,229.317,122.125,446.087,75.602,446.968 " shape="polygon">
+                    <area alt="rightleg1" title="rightleg1" href="#legs" coords="175.801,196.026,131.835,226.102,127.119,443.271,177.418,445.126 " shape="polygon">
+                    <area alt="leftleg2" title="leftleg2" href="#legs" coords="280.624,187.825,323.446,248.472,322.010,430.307,280.051,437.601 " shape="polygon">
+                    <area alt="rightleg2" title="rightleg2" href="#legs" coords="375.745,201.853,327.371,244.582,328.807,431.743,365.628,431.743" shape="polygon">
+                    </map>
+
+        </div>
+        <!--
+        "leftarm1"  61.765,74.550, 88.847,78.020,58.519,249.251,22.407,247.324
+        "leftarm2"  289.538,67.891,257.403,69.110,222.408,250.602,255.945,258.493
+        "rightarm1" 163.042,82.384,189.038,82.384,226.266,240.643,193.271,266.719
+        "rightarm2" 365.412,69.110,385.547,66.972,431.157,246.404,389.292,258.493
+        "torso"  87.085,83.399,160.675,83.399,180.810,196.770,69.344,196.026
+        "back"  288.283,65.648,363.294,64.794,378.854,196.026,274.572,190.682
+        "leftleg1" 76.502,196.482,123.660,229.317,122.125,446.087,75.602,446.968
+        "rightleg1"  175.801,196.026,131.835,226.102,127.119,443.271,177.418,445.126
+        "leftleg2"  280.624,187.825,323.446,248.472,322.010,430.307,280.051,437.601
+        "rightleg2"  375.745,201.853,327.371,244.582,328.807,431.743,365.628,431.743
+        -->
+        <section id="arms">
+            
+            ARM EXERCISE
+            <br><img src="arm.png" width="250" height="250">
+        </section>
+        <section id="legs">
+            LEGS EXERCISE
+            <br><img src="leg.png" >
+        </section>
+        <section id="torso">
+            TORSO EXERCISE <br>
+
+            <br><img src="torso.png"width="250" height="250">
+        </section>
+        <section id="back">
+            BACK EXERCISE
+            <br><img src="back.png"width="250" height="250">
+        </section>
     </section>  
 
 
