--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -54,31 +54,20 @@
 
                 <!--resized-->
                 <map name="image_map">
-                    <area alt="leftarm1" title="leftarm1" href="#arms" coords="61.765,74.550, 88.847,78.020,58.519,249.251,22.407,247.324 " shape="polygon">
-                    <area alt="leftarm2" title="leftarm2" href="#arms" coords="289.538,67.891,257.403,69.110,222.408,250.602,255.945,258.493 " shape="polygon">
-                    <area alt="rightarm1" title="rightarm1" href="#arms" coords="163.042,82.384,189.038,82.384,226.266,240.643,193.271,266.719" shape="polygon">
-                    <area alt="rightarm2" title="rightarm2" href="#arms" coords="365.412,69.110,385.547,66.972,431.157,246.404,389.292,258.493 " shape="polygon">
-                    <area alt="torso" title="torso" href="#torso" coords="87.085,83.399,160.675,83.399,180.810,196.770,69.344,196.026" shape="polygon">
-                    <area alt="back" title="back" href="#back" coords="288.283,65.648,363.294,64.794,378.854,196.026,274.572,190.682" shape="polygon">
-                    <area alt="leftleg1" title="leftleg1" href="#legs" coords="76.502,196.482,123.660,229.317,122.125,446.087,75.602,446.968 " shape="polygon">
-                    <area alt="rightleg1" title="rightleg1" href="#legs" coords="175.801,196.026,131.835,226.102,127.119,443.271,177.418,445.126 " shape="polygon">
-                    <area alt="leftleg2" title="leftleg2" href="#legs" coords="280.624,187.825,323.446,248.472,322.010,430.307,280.051,437.601 " shape="polygon">
-                    <area alt="rightleg2" title="rightleg2" href="#legs" coords="375.745,201.853,327.371,244.582,328.807,431.743,365.628,431.743" shape="polygon">
+                    <area alt="leftarm1" title="leftarm1" href="#arms" coords="86.502,69.224 75.597,76.067 65.106,92.874 63.195,109.808 57.302,124.892 57.302,144.627 50.007,166.411 45.906,205.777 26.575,236.582 38.952,259.687 59.408,248.027 57.302,207.515 79.352,160.651 78.420,142.671 82.295,129.167 " shape="polygon">
+                    <area alt="rightarm1" title="rightarm1" href="#arms" coords="171.889,72.169 169.407,121.190 175.554,148.201 174.053,164.558 194.331,208.000 188.965,234.922 211.379,253.078 223.624,218.710 205.407,199.124 202.131,159.163 195.111,147.487 193.246,121.470 188.965,106.075 183.773,81.591 " shape="polygon">
+                    <area alt="torso" title="torso" href="#torso" coords="87.259,68.992 165.952,69.752 163.888,134.267 158.678,154.214 161.004,170.797 148.898,194.209 96.429,189.922 90.054,170.797 90.054,151.433 84.482,123.342 " shape="polygon">
+                    <area alt="leftleg1" title="leftleg1" href="#legs" coords="82.623,204.972 79.641,239.162 93.523,313.774 87.682,368.675 97.854,405.679 101.003,437.410 101.946,448.077 95.653,459.148 84.500,473.229 96.537,488.258 112.037,473.229 116.952,454.758 116.236,441.938 110.649,426.936 113.962,375.033 110.649,350.425 119.243,240.257 128.796,174.282 " shape="polygon">
+                    <area alt="rightleg1" title="rightleg1" href="#legs" coords="128.733,223.606 167.643,196.002 173.317,238.064 159.242,306.676 164.992,342.137 154.004,377.598 150.221,406.431 148.352,419.726 169.630,436.604 150.788,446.670 135.340,434.379 130.749,419.088 132.781,404.575 137.624,426.021 134.401,385.208 138.143,355.402 127.199,294.483 " shape="polygon">
+                    <area alt="leftarm2" title="leftarm2" href="#arms" coords="288.143,69.422 263.033,80.107 260.614,105.695 253.710,141.651 244.993,180.057 243.429,204.078 228.569,226.888 234.179,255.542 254.056,255.542 257.474,216.220 255.093,204.078 277.532,160.302 277.532,143.722 283.142,125.698 " shape="polygon">
+                    <area alt="rightarm2" title="rightarm2" href="#arms" coords="367.419,71.017 385.395,81.982 385.395,98.684 392.520,120.797 391.274,136.961 403.322,168.356 406.098,195.552 422.906,215.678 416.688,240.940 388.494,243.046 384.366,206.010 388.983,194.866 361.245,150.234 358.321,120.485 " shape="polygon">
+                    <area alt="back" title="back" href="#back" coords="290.340,71.104 363.656,71.635 365.427,123.370 357.849,156.962 359.192,178.913 324.506,197.665 288.297,177.199 291.360,156.230 284.855,127.356" shape="polygon">
+                    -<area alt="leftleg2" title="leftleg2" href="#legs" coords="280.304,219.074 277.199,252.048 284.597,277.004 291.889,299.740 284.958,335.478 300.798,384.884 298.581,400.000 287.871,408.211 303.033,426.337 319.325,420.122 311.183,401.325 314.253,349.860 308.456,324.353 316.006,229.747 315.291,201.117 287.871,178.381 " shape="polygon">
+                    -<area alt="rightleg2" title="rightleg2" href="#legs" coords="360.201,179.384 330.354,204.541 331.321,284.415 338.809,323.486 332.192,349.920 335.080,383.262 330.354,415.460 329.388,435.948 359.234,439.675 363.927,417.606 350.007,393.915 363.927,335.857 359.970,306.541 367.459,279.604 375.481,240.994 370.754,198.991 " shape="polygon">
                     </map>
 
         </div>
-        <!--
-        "leftarm1"  61.765,74.550, 88.847,78.020,58.519,249.251,22.407,247.324
-        "leftarm2"  289.538,67.891,257.403,69.110,222.408,250.602,255.945,258.493
-        "rightarm1" 163.042,82.384,189.038,82.384,226.266,240.643,193.271,266.719
-        "rightarm2" 365.412,69.110,385.547,66.972,431.157,246.404,389.292,258.493
-        "torso"  87.085,83.399,160.675,83.399,180.810,196.770,69.344,196.026
-        "back"  288.283,65.648,363.294,64.794,378.854,196.026,274.572,190.682
-        "leftleg1" 76.502,196.482,123.660,229.317,122.125,446.087,75.602,446.968
-        "rightleg1"  175.801,196.026,131.835,226.102,127.119,443.271,177.418,445.126
-        "leftleg2"  280.624,187.825,323.446,248.472,322.010,430.307,280.051,437.601
-        "rightleg2"  375.745,201.853,327.371,244.582,328.807,431.743,365.628,431.743
-        -->
+       
         <section id="arms">
             
             ARM EXERCISE
