--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -65,7 +65,16 @@
                     <area alt="leftleg2" title="leftleg2" href="#legs" coords="280.304,219.074 277.199,252.048 284.597,277.004 291.889,299.740 284.958,335.478 300.798,384.884 298.581,400.000 287.871,408.211 303.033,426.337 319.325,420.122 311.183,401.325 314.253,349.860 308.456,324.353 316.006,229.747 315.291,201.117 287.871,178.381 " shape="polygon">
                     <area alt="rightleg2" title="rightleg2" href="#legs" coords="360.201,179.384 330.354,204.541 331.321,284.415 338.809,323.486 332.192,349.920 335.080,383.262 330.354,415.460 329.388,435.948 359.234,439.675 363.927,417.606 350.007,393.915 363.927,335.857 359.970,306.541 367.459,279.604 375.481,240.994 370.754,198.991 " shape="polygon">
                     </map>
-                    <div id="overlay" class="overlay"></div>
+                    <div id="overlaytorso" class="overlaytorso"></div>
+                <div id="overlayleftarm1" class="overlayleftarm1"></div>
+                <div id="overlayrightarm1" class="overlayrightarm1"></div>
+                <div id="overlayleftleg1" class="overlayleftleg1"></div>
+                <div id="overlayrightleg1" class="overlayrightleg1"></div>
+                <div id="overlayleftarm2" class="overlayleftarm2"></div>
+                <div id="overlayrightarm2" class="overlayrightarm2"></div>
+                <div id="overlayback" class="overlayback"></div>
+                <div id="overlayleftleg2" class="overlayleftleg2"></div>
+                <div id="overlayrightleg2" class="overlayrightleg2"></div>
         </div>
        
         <section id="arms">
