--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -91,19 +91,39 @@
             
             ARM EXERCISE
             <br><img src="arm.png" width="250" height="250">
+            <ul class="arm-exercises">
+                <li>bicep curls</li>
+                <li>hammer curls</li>
+                <li>Arnold press</li>
+                <li>Overhead cable curl</li>
+                <li>High plank</li>
+                <li>Concentration curls</li>
+            </ul>
         </section>
         <section id="legs">
             LEGS EXERCISE
             <br><img src="leg.png" >
+            <ul class="leg-exercises">
+
+            </ul>
         </section>
         <section id="torso">
-            TORSO EXERCISE <br>
-
+            TORSO EXERCISE 
             <br><img src="torso.png"width="250" height="250">
+            <ul class="torso-exercises">
+                <li>crunches</li>
+                <li>boat folds</li>
+                <li>flutter kicks</li>
+                <li>raised legs</li>
+                <li>push up</li>
+            </ul>
         </section>
         <section id="back">
             BACK EXERCISE
             <br><img src="back.png"width="250" height="250">
+            <ul class="back-exercises">
+
+            </ul>
         </section>
     </section>  
 
