--- a/HealthWeb/HealthP3.html
+++ b/HealthWeb/HealthP3.html
@@ -85,8 +85,9 @@
                 <div id="overlayback" class="overlayback"></div>
                 <div id="overlayleftleg2" class="overlayleftleg2"></div>
                 <div id="overlayrightleg2" class="overlayrightleg2"></div>
+                <p class="description">(Click on the body part that you want to exercise on!)</p>
         </div>
-        <section id="exercise-content">
+    <section id="exercise-content">
 
       
         <section id="arms">
@@ -102,11 +103,17 @@
                 <li>Concentration curls</li>
             </ul>
         </section>
+      </section>  
         <section id="legs">
             <p id="leg-title">LEGS EXERCISE</p>
             <br><img src="leg.png" >
             <ul class="leg-exercises">
-
+                <li>Squats</li>
+                <li>Lunges</li>
+                <li>Leg Press</li>
+                <li>Calf Raises</li>
+                <li>Leg Extensions</li>
+                <li>Leg Curls</li>
             </ul>
         </section>
         <section id="torso">
@@ -124,11 +131,16 @@
             <p id="back-title">BACK EXERCISE</p>
             <br><img src="back.png"width="250" height="250">
             <ul class="back-exercises">
-
+                <li>Lat Pulldowns</li>
+                <li>Deadlifts</li>
+                <li>Bent Over Rows</li>
+                <li>Hyperextensions (Back Extensions)</li>
+                <li>Face Pulls</li>
+                <li>Reverse Flyes</li>
             </ul>
         </section>
           </section>
-    </section>  
+    
 
 
     <section class="footer">
