--- a/HealthWebCopy/exercise.html
+++ b/HealthWebCopy/exercise.html
@@ -86,7 +86,7 @@
                 <br><img src="./images/arm.png" width="250" height="250">
                 <ul class="arm-exercises">
                     <li>bicep curls</li>
-                    <li>hammer curls</li>
+                    <li><a href="https://www.youtube.com/watch?v=TwD-YGVP4Bk">hammer curls</a></li>
                     <li>Arnold press</li>
                     <li>Overhead cable curl</li>
                     <li>High plank</li>
