--- a/HealthWebCopy/exercise.html
+++ b/HealthWebCopy/exercise.html
@@ -85,12 +85,12 @@
                 <p id="arm-title">ARM EXERCISE</p>
                 <br><img src="./images/arm.png" width="250" height="250">
                 <ul class="arm-exercises">
-                    <li>bicep curls</li>
+                    <li><a href="https://www.youtube.com/watch?v=ykJmrZ5v0Oo">bicep curls</a></li>
                     <li><a href="https://www.youtube.com/watch?v=TwD-YGVP4Bk">hammer curls</a></li>
-                    <li>Arnold press</li>
-                    <li>Overhead cable curl</li>
-                    <li>High plank</li>
-                    <li>Concentration curls</li>
+                    <li><a href="https://www.youtube.com/watch?v=6Z15_WdXmVw">Arnold press</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=bZNSzBojNkM">Overhead cable curl</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=EKZfeoVuPbE">High plank</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=RFjAyUwHuQA">Concentration curls</a></li>
                 </ul>
             </section>
         </section>
@@ -98,35 +98,35 @@
                 <p id="leg-title">LEGS EXERCISE</p>
                 <br><img src="./images/leg.png"class= >
                 <ul class="leg-exercises">
-                    <li>Squats</li>
-                    <li>Lunges</li>
-                    <li>Leg Press</li>
-                    <li>Calf Raises</li>
-                    <li>Leg Extensions</li>
-                    <li>Leg Curls</li>
+                    <li><a href="https://www.youtube.com/watch?v=xqvCmoLULNY">Squats</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=wrwwXE_x-pQ">Lunges</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=8EMbB0tCn7Q">Leg Press</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=8edqxUm0nms">Calf Raises</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=4ZDm5EbiFI8">Leg Extensions</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ZHlBSI6JPsA">Leg Curls</a></li>
                 </ul>
             </section>
             <section id="torso">
                 <p id="torso-title">TORSO EXERCISE </p>
                 <br><img src="./images/torso.png"width="250" height="250">
                 <ul class="torso-exercises">
-                    <li>crunches</li>
-                    <li>boat folds</li>
-                    <li>flutter kicks</li>
-                    <li>raised legs</li>
-                    <li>push up</li>
+                    <li><a href="https://www.youtube.com/watch?v=0t4t3IpiEao">crunches</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=VN-6jygZ094">boat folds</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ANVdMDaYRts">flutter kicks</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=l4kQd9eWclE">raised legs</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=Q7cPaJZoOng">push up</a></li>
                 </ul>
             </section>
             <section id="back">
                 <p id="back-title">BACK EXERCISE</p>
                 <br><img src="./images/back.png"width="250" height="250">
                 <ul class="back-exercises">
-                    <li>Lat Pulldowns</li>
-                    <li>Deadlifts</li>
-                    <li>Bent Over Rows</li>
-                    <li>Hyperextensions (Back Extensions)</li>
-                    <li>Face Pulls</li>
-                    <li>Reverse Flyes</li>
+                    <li><a href="https://www.youtube.com/watch?v=0BT533ueEdI">Lat Pulldowns</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=1ZXobu7JvvE">Deadlifts</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=9Gf-Ourup_k">Bent Over Rows</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=ph3pddpKzzw">Hyperextensions (Back Extensions)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=0Po47vvj9g4">Face Pulls</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=JoCRRZ3zRtI">Reverse Flyes</a></li>
                 </ul>
             </section>
 
