--- a/CISC3610/CartoonProj/index.html
+++ b/CISC3610/CartoonProj/index.html
@@ -8,6 +8,7 @@
     <link ref="stylesheet" href="cartoon.css">
 </head>
 <body id="body" style="position: center; padding: 0; margin-top: 5%; margin-left: 275px;">
+<a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
     <div id="bodybackground" > <!--w/ mountian-->
          <canvas id="Canvas" width="1000" height="600" style="border:1px solid #000000;position:absolute"></canvas>
     </div>
