--- a/CISC3610/JSON/index.html
+++ b/CISC3610/JSON/index.html
@@ -6,6 +6,7 @@
     <title>JSON hw</title>
 </head>
 <body>
+    <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
     <p> Hi :D</p>
 </body>
 </html>
