--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cisc3610 HomePage</title>
 </head>
-<body>
-    <h1>HomePage</h1>
+<body style="margin: auto;max-width: 50%;">
+    <h1>Jady Yip's HomePage</h1>
     <b><a href="https://parkjaeyi.github.io/CISC3610/CartoonProj/">Cartoon Project</a></b><br>
     <br>
     
-    <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON HW</a></b>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON HW</a></b> 
 </body>
 </html>
