--- a/CISC3610/JSON/index.html
+++ b/CISC3610/JSON/index.html
@@ -6,10 +6,11 @@
     <title>JSON hw</title>
     <script  src="JSON.js"></script>
 </head>
-<body>
-    <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
+<body >
+   
     <div style="position: center; width:50% ;margin:auto; margin-top: 100px; ">
         <canvas id="myCanvas" width="800" height="600" style="border:1px solid #000000;position:absolute center;"></canvas>
-    </div>
+    </div> 
+    <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; margin-left: 50%;" >HomePage</a>
 </body>
 </html>
