--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -11,5 +11,8 @@
     <br>
     
     <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON HW</a></b> 
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/Form/">Registration Form Project</a></b>
 </body>
 </html>
