--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -13,6 +13,6 @@
     <b><a href="https://parkjaeyi.github.io/CISC3610/JSON/">JSON HW</a></b> 
     <br>
     <br>
-    <b><a href="https://parkjaeyi.github.io/CISC3610/Form/">Registration Form Project</a></b>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/Form/">Conversion Form Project</a></b>
 </body>
 </html>
