--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -14,5 +14,9 @@
     <br>
     <br>
     <b><a href="https://parkjaeyi.github.io/CISC3610/Form/">Conversion Form Project</a></b>
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/AudioLab/">Audio Lab</a></b>
+
 </body>
 </html>
