--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cisc3610 HomePage</title>
 </head>
-<body style="margin: auto;max-width: 50%;">
-    <h1>Jady Yip's HomePage</h1>
+<body style="margin: auto;max-width: 50%;align-items: center;">
+    <div >
+        <h1>Jady Yip's HomePage</h1>
     <b><a href="https://parkjaeyi.github.io/CISC3610/CartoonProj/">Cartoon Project</a></b><br>
     <br>
     
@@ -17,6 +18,8 @@
     <br>
     <br>
     <b><a href="https://parkjaeyi.github.io/CISC3610/AudioLab/">Audio Lab</a></b>
+    </div>
+    
 
 </body>
 </html>
