--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -6,8 +6,8 @@
     <title>Cisc3610 HomePage</title>
 </head>
 <body style="margin: auto;max-width: 50%;align-items: center;">
-    <div >
-        <h1>Jady Yip's HomePage</h1>
+    <div style="text-align: center;">
+    <h1>Jady Yip's HomePage</h1>
     <b><a href="https://parkjaeyi.github.io/CISC3610/CartoonProj/">Cartoon Project</a></b><br>
     <br>
     
