--- a/CISC3610/AudioLab/index.html
+++ b/CISC3610/AudioLab/index.html
@@ -9,7 +9,7 @@
     <script language="javascript">
 
         var Eddie= new Audio("Eddie.mp3");//mp3 for E
-        var Ate= new Audio("Ate,mp3");
+        var Ate= new Audio("Ate.mp3");
         var Dynamite= new Audio("Dynamite.mp3");
         var Good= new Audio("Good.mp3");
         var Bye= new Audio("Bye.mp3");
