--- a/CISC3610/AudioLab/index.html
+++ b/CISC3610/AudioLab/index.html
@@ -107,6 +107,7 @@
     <!-- <button onlick="aud.play();">
         Dog
     </button> -->
+    <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
     <h1 style="text-align: center;">Click on the strings</h1>
     <div style="text-align: center;">
     <h2 id="Edisplay"style="display: none;">E</h2>
