--- a/CISC3610/Form/index.html
+++ b/CISC3610/Form/index.html
@@ -62,7 +62,8 @@
     </script>
 </head>
 <body id="body">
-    <form name="form" id = "form">
+   
+    <form name="form" id = "form"> <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px">HomePage</a>
         <div id="formbody">
             <h1>Conversion Form</h1>
           
