--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -18,6 +18,9 @@
     <br>
     <br>
     <b><a href="https://parkjaeyi.github.io/CISC3610/AudioLab/">Audio Lab</a></b>
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/AnimationVideo/">Video Animation</a></b>    
     </div>
     
 
