update to json HW

--- a/CISC3610/JSON/index.html
+++ b/CISC3610/JSON/index.html
@@ -7,10 +7,11 @@
     <script  src="JSON.js"></script>
 </head>
 <body >
-   
-    <div style="position: center; width:50% ;margin:auto; margin-top: 100px; ">
-        <canvas id="myCanvas" width="800" height="600" style="border:1px solid #000000;position:absolute center;"></canvas>
+
+   <div style="text-align: center;margin-top: 100px;"><a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; " >HomePage</a></div>
+    <div style="position: center; width:50% ;margin:auto; ">
+        <canvas id="myCanvas" width="800" height="900" style="border:1px solid #000000;position:absolute center;"></canvas>
     </div> 
-    <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; margin-left: 50%;" >HomePage</a>
+    
 </body>
 </html>
