--- a/CISC3610/JSON/index.html
+++ b/CISC3610/JSON/index.html
@@ -9,7 +9,7 @@
 <body >
 
    <div style="text-align: center;margin-top: 100px;"><a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; " >HomePage</a></div>
-    <div style="position: center; width:50% ;margin:auto; ">
+    <div style=" width:50% ;margin:auto; ">
         <canvas id="myCanvas" width="800" height="900" style="border:1px solid #000000;position:absolute center;"></canvas>
     </div> 
     
