--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -21,6 +21,9 @@
     <br>
     <br>
     <b><a href="https://parkjaeyi.github.io/CISC3610/AnimationVideo/">Video Animation</a></b>    
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/Bootstrap/">Simple Bootstrap Page</a></b>  
     </div>
     
 
