--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -23,7 +23,7 @@
     <b><a href="https://parkjaeyi.github.io/CISC3610/AnimationVideo/">Video Animation</a></b>    
     <br>
     <br>
-    <b><a href="https://parkjaeyi.github.io/CISC3610/Bootstrap/">Simple Bootstrap Page</a></b>  
+    <b><a href="https://parkjaeyi.github.io/CISC3610/BootStrap/">Simple Bootstrap Page</a></b>  
     </div>
     
 
