--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -24,6 +24,9 @@
     <br>
     <br>
     <b><a href="https://parkjaeyi.github.io/CISC3610/BootStrap/">Simple Bootstrap Page</a></b>  
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/WickEditorProj/">WickEditorProj</a></b>  
     </div>
     
 
