--- a/CISC3610/WickEditorProj/index.html
+++ b/CISC3610/WickEditorProj/index.html
@@ -5,7 +5,7 @@
         <title>Coin Menu</title>
     </head>
 
-    <body>
+    <body style="text-align: center;">
 		<a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; ">HomePage</a>
         <!-- The Wick project is bundled here during HTML export. (see src/export/html/HTMLExport.js) -->
         <script>
