--- a/CISC3610/AnimationVideo/index.html
+++ b/CISC3610/AnimationVideo/index.html
@@ -7,6 +7,9 @@
 </head>
 <body style="text-align: center; margin-top: 150px;">
     <a href="https://parkjaeyi.github.io/CISC3610/HomePage.html" style="font-size:20px; ">HomePage</a>
-     <img src="Pokeball.gif" type="image/gif">
+    
+    <div>
+        <img src="Pokeball.gif" type="image/gif">
+    </div>
 </body>
 </html>
