--- a/CISC3610/HomePage.html
+++ b/CISC3610/HomePage.html
@@ -35,6 +35,9 @@
     <br>
     <a href="https://parkjaeyi.github.io/CISC3610/WickEditorProj/CoinMenu.wick">WickEditorProj.wick</a></li>
     </div>
+    <br>
+    <br>
+    <b><a href="https://parkjaeyi.github.io/CISC3610/DataVisualization/">Data Visualization Proj</a></b>  
     
     
     </div>
