--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -14,7 +14,7 @@
 <meta name="theme-color"content="black">
 
 <!-- Manifest File link -->
-<link rel= “manifest” href= “manifest.json” >
+<link rel= “manifest” href= “Manifest.json” >
 <script src="app.js"></script>
 <script src="service-worker.js"></script>
 <link rel="stylesheet" href="form.css">
