--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -14,11 +14,12 @@
 <meta name="theme-color"content="black">
 
 <!-- Manifest File link -->
-<link rel= “manifest” href= “Manifest.json” >
+
 <script src="app.js"></script>
 <script src="service-worker.js"></script>
+<script src="Manifest.json"></script>
 <link rel="stylesheet" href="form.css">
-
+<link rel= “manifest” href= “Manifest.json” >
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 <script language="JavaScript">
