--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -17,9 +17,9 @@
 
 <script src="app.js"></script>
 <script src="service-worker.js"></script>
-<script src="Manifest.json"></script>
+<script src="manifest.json"></script>
 <link rel="stylesheet" href="form.css">
-<link rel= “manifest” href= “Manifest.json” >
+<link rel= “manifest” href= “manifest.json” >
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 <script language="JavaScript">
