--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -19,7 +19,7 @@
 <script src="service-worker.js"></script>
 
 <link rel="stylesheet" href="form.css">
-<link rel= “manifest” href= “/manifest.json” >
+<link rel= “manifest” href= “manifest.json” >
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 <script language="JavaScript">
