--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -2,24 +2,19 @@
 <html>
 <head>
 
-<!-- Responsive -->
-<meta charset="utf-8">
-<meta name= “viewport” content="width=device-width, user-scalable=no ">
-<meta http-equiv="X-UA-Compatible"
-		content="ie=edge">
 
-<!-- Title -->
+
+
 <title>PWA</title>
-<meta name="apple-mobile-web-app-status-bar"content="#aa7700">
-<meta name="theme-color"content="black">
+
 
 <!-- Manifest File link -->
-
-<script src="app.js"></script>
-<script src="service-worker.js"></script>
+<link rel= “manifest” href= “manifest.json” >
+<!--<script src="app.js"></script>-->
+<!--<script src="service-worker.js"></script>-->
 
 <link rel="stylesheet" href="form.css">
-<link rel= “manifest” href= “manifest.json” >
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 <script language="JavaScript">
