--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -7,7 +7,7 @@
 
 <title>PWA</title>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Manifest File link -->
 <link rel= “manifest” href= “manifest.json” >
 <!--<script src="app.js"></script>-->
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href="form.css">
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
 
 <script language="JavaScript">
 
@@ -105,6 +105,6 @@
         <!--<button name="next" onclick="redirectToNextPage()">Next</button>-->   <!--leads to the next page once the button is clicked-->
     </form>
    
-
+    <script src="app.js"></script>
 </body>
 </html>
