--- a/CISC3610/PWATesting/index.html
+++ b/CISC3610/PWATesting/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Hello, World!</title>
   <link rel="manifest" href="manifest.json">
-	
+  <link rel="stylesheet" href="form.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
