edit dwsync file

--- a/CISC3610/PWATesting/index.html
+++ b/CISC3610/PWATesting/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello, World!</title>
+  <title>Temperature App</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="form.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,7 +89,7 @@
         <button name="Reset">Reset</button> <!--Clear data-->
         <button name="Save" >Save</button> <!--save data-->
         <button name="Access">Access</button> <!--retrieve data-->
-        <!--<button name="next" onclick="redirectToNextPage()">Next</button>-->   <!--leads to the next page once the button is clicked-->
+       
     </form>
    
 <script src="app.js"></script>
