--- a/CISC3610/PWA/index.html
+++ b/CISC3610/PWA/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<title>PWA</title>
-
+  <title>Temperature App</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="form.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Manifest File link -->
-<link rel= “manifest” href= “manifest.json” >
-<link rel="stylesheet" href="form.css">
-<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
 
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script language="JavaScript">
 
     function redirectToNextPage() {
@@ -60,7 +58,6 @@
 
 </script>
 </head>
-
 <body id="body">
     <form name="form" id = "form">
         <div id="formbody">
@@ -92,9 +89,10 @@
         <button name="Reset">Reset</button> <!--Clear data-->
         <button name="Save" >Save</button> <!--save data-->
         <button name="Access">Access</button> <!--retrieve data-->
-        <!--<button name="next" onclick="redirectToNextPage()">Next</button>-->   <!--leads to the next page once the button is clicked-->
+       
     </form>
    
-    <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
+
